--- a/pages/list/index.wxss
+++ b/pages/list/index.wxss
@@ -1,1 +1,23 @@
 /* pages/list/index.wxss */
+.job-panel {
+    margin: 40rpx;
+    border-radius: 8rpx;
+    font-size: 32rpx;
+    background: #efefef
+}
+.job-name {
+    padding: 10rpx;
+    border-top-left-radius: 8rpx;
+    border-top-right-radius: 8rpx;
+    text-align: center;
+    background: lightgrey
+}
+.job-address {
+    padding: 10rpx;
+}
+.job-e-address {
+    padding: 10rpx;
+}
+.job-description {
+    padding: 10rpx;
+}
