--- a/pages/apply/index.wxml
+++ b/pages/apply/index.wxml
@@ -1,2 +1,13 @@
 <!--pages/apply/index.wxml-->
-<text>pages/apply/index.wxml</text>
+<view>
+  <view class="text">职位：{{position['.value'].name}}\n</view>
+  <view class="text">工作地点：{{position['.value'].address}}\n</view>
+  <form bindsubmit="onApplySubmit">
+    <input name="name" placeholder="姓名"></input>
+    <input name="tel" placeholder="手机"></input>
+    <input name="email" placeholder="邮箱"></input>
+    <input name="referee" placeholder="推荐人姓名"></input>
+    <button form-type="submit">提交申请</button>
+  </form>
+</view>
+
