--- a/pages/apply/index.wxss
+++ b/pages/apply/index.wxss
@@ -1,1 +1,17 @@
 /* pages/apply/index.wxss */
+input, button {
+    margin: 40rpx;
+    padding: 10rpx;
+    border-radius: 8rpx;
+    font-size: 32rpx;
+}
+input {
+    border: 0.1rpx solid lightgrey; 
+}
+button {
+    background: lightgray;
+}
+.text {
+    margin: 40rpx;
+    font-size: 32rpx;
+}
