--- a/pages/explore/index.wxss
+++ b/pages/explore/index.wxss
@@ -1,1 +1,13 @@
-/* pages/explore/index.wxss */
+/* pages/candidates/index.wxss */
+.candidate-panel {
+  margin: 40rpx;
+  padding: 20rpx;
+  border-radius: 8rpx;
+  font-size: 32rpx;
+  background: #efefef
+}
+.candidate-panel view {
+  margin: 10rpx 0;
+}
+
+
